Bug 410906 - 404 on help for settings in Umbrello
Summary: 404 on help for settings in Umbrello
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-14 18:21 UTC by gord.tomlin
Modified: 2020-02-07 17:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.30.3 (KDE Applications 19.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gord.tomlin 2019-08-14 18:21:32 UTC
404 on help for settings in Umbrello


STEPS TO REPRODUCE
1. Start Umbrello.
2. Click "Settings".
3. Click "Configure Umbrello UML Modeller...".
4. Click the "Help" button on the Umbrello Setup window.
5. Browser window opens to https://docs.kde.org/stable4/en/kdesdk/umbrello/umbrello%2Findex.html.html, which gets a 404 error.

OBSERVED RESULT

404


EXPECTED RESULT

A web page with relevant help info.


SOFTWARE/OS VERSIONS
Windows: 10 Pro Version 1709
Firefox: 68.0.1

ADDITIONAL INFORMATION
Comment 1 Ralf Habacker 2020-02-06 23:31:02 UTC
Git commit 735d0e93a2b6eff20b22801f4beee39f4104d73f by Ralf Habacker.
Committed on 06/02/2020 at 23:30.
Pushed by habacker into branch 'release/19.12'.

Fix '404 on help for settings in Umbrello

In KDE4, the help button is managed by the dialog,
so the corresponding code in slotHelpClicked() is
superfluous.
FIXED-IN:2.30.3 (KDE Applications 19.12.3)

M  +2    -8    umbrello/dialogs/multipagedialogbase.cpp
M  +1    -1    umbrello/dialogs/multipagedialogbase.h

https://invent.kde.org/kde/umbrello/commit/735d0e93a2b6eff20b22801f4beee39f4104d73f
Comment 2 Ralf Habacker 2020-02-07 17:19:54 UTC
Git commit c665f09b7c4fc3efe6e656effce62b5c85168568 by Ralf Habacker, on behalf of Jon Hayes.
Committed on 06/02/2020 at 23:42.
Pushed by habacker into branch 'master'.

Added applicable handbook documentation

Test Plan: run program and open settings dialog, press help button to be taken to handook in the settings section

Reviewed-by: rhabacker
Differential Revision: https://phabricator.kde.org/D27201

A  +-    --    doc/auto-layout-settings.png
A  +-    --    doc/class-settings.png
A  +-    --    doc/code-generation-formatting-settings.png
A  +-    --    doc/code-generation-general-settings.png
A  +-    --    doc/code-generation-language-general.png
A  +-    --    doc/code-generation-language-method-settings.png
A  +-    --    doc/code-import-settings.png
A  +-    --    doc/code-viewer-settings.png
A  +-    --    doc/diagram-font-settings.png
A  +-    --    doc/font-settings.png
A  +-    --    doc/general-settings.png
M  +3    -1    doc/index.docbook
A  +566  -0    doc/settings.docbook
A  +-    --    doc/user-interface-settings.png
M  +2    -2    umbrello/dialogs/multipagedialogbase.cpp

https://invent.kde.org/kde/umbrello/commit/c665f09b7c4fc3efe6e656effce62b5c85168568