Fix '404 on help for settings in Umbrello

In KDE4, the help button is managed by the dialog,
so the corresponding code in slotHelpClicked() is
superfluous.

BUG:410906
FIXED-IN:2.30.3 (KDE Applications 19.12.3)